fix contrast ratio with hover nav

--- a/styles/base.css
+++ b/styles/base.css
@@ -31,7 +31,7 @@ header h1 {
 }
 
 nav {
-    background-color:rgb(54, 118, 97);
+    background-color:#2c5f4e;
     width: 100%;
     margin: 0 auto;
 }
@@ -58,7 +58,7 @@ nav ul li a {
 }
 
 .active a {
-    background-color: rgb(68, 147, 121);
+    background-color: #3d836d;
 }
 
 main {
@@ -89,7 +89,7 @@ h2 {
     font-weight: 700;
     padding: 1rem;
     color: #fff;
-    background-color: rgb(54, 118, 97);
+    background-color: #2c5f4e;
 }
 
 h3 {
